Nueva ruta para filtrar usuarios dependiendo su permiso
